Fix layout bugs

--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
 
 #main li {
   list-style: none;
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 #main li a {
